mq/environments/base/mq-metric-samples/deployment.yaml
---
# Source: mq-metric-samples/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mq-metric-samples
  labels:
    app.kubernetes.io/name: mq-metric-samples
    app.kubernetes.io/instance: mq-metric-samples
    app: mq-metric-samples
    app.kubernetes.io/part-of: inventory
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mq-metric-samples
      app.kubernetes.io/instance: mq-metric-samples
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mq-metric-samples
        app.kubernetes.io/instance: dev-mq-metric-samples-instance
    spec:
      serviceAccountName: mq-metric-samples
      volumes:
      containers:
        - name: mq-metric-samples
          image: replace:replace
          imagePullPolicy: IfNotPresent
          volumeMounts:
          resources:
            null
